tests/integration/errors/passive-errdefer.orng
// 121
fn main() -> Int
    let mut z = 10
    let mut y = 10
    f(&mut z, true)
    f(&mut y, false)
    z + y

fn f(x: &mut Int, fail: Bool)->()!()
    errdefer x^ += 9
    x^ = 6
    if fail
        errdefer x^ += 100
        (.err <- ())
    else    
        (.ok <- ())